--- a/static/shared/css/documentation.css
+++ b/static/shared/css/documentation.css
@@ -120,10 +120,16 @@ pre {
 #code-intro {
     width: 50%;
     float: left;
+    padding: 0 5% 0 0;
+}
+
+.code-wrapper {
+    width: 50%;
+    padding: 0 0 0 5%;
+    float: right;
 }
 .index-demo-code pre {
-    width: 50%;
-    float: right;
+    width: 100%;
     height: 25em;
     margin: 3.5em 0;
     padding: 0.5em;
